base components is ready

--- a/src/Components/Recommendations/Recommendations.module.css
+++ b/src/Components/Recommendations/Recommendations.module.css
@@ -1,13 +1,7 @@
-import React from "react";
-
-
-export const Recommendations = () => {
-
-
-    return (
-        <div>
-
-
-        </div>
-    )
+.RecommendationsContainer {
+    position: relative;
+    width: 1366px;
+    min-height: 771px;
 }
+
+
