--- a/src/Components/SidePanel/SidePanel.module.css
+++ b/src/Components/SidePanel/SidePanel.module.css
@@ -3,7 +3,7 @@
     width: 351px;
     left: 1015px;
     top: 0%;
-    bottom: -46.59%;
+    /*bottom: -46.59%;*/
 }
 .slidePanel{
     display: flex;
