--- a/src/Components/Recommendations/Recommendations.module.css
+++ b/src/Components/Recommendations/Recommendations.module.css
@@ -1,7 +1,50 @@
 .RecommendationsContainer {
     position: relative;
-    width: 1366px;
-    min-height: 771px;
+    /*width: 1366px;*/
+    /*min-height: 100%;*/
+}
+.productContainer{
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*align-items: center;*/
+    /*padding: 0px;*/
+
+    /*position: absolute;*/
+    /*width: 916px;*/
+    /*!*height: 1302px;*!*/
+    /*left: 50px;*/
+    /*top: 199px;*/
+
+    display: flex;
+    flex-direction: column;
+    /* padding: 0px; */
+    /* position: absolute; */
+    width: 916px;
+    /* height: 1302px; */
+    /* left: 50px; */
+    /* top: 199px; */
+    padding: 170px 0 0 50px;
+    align-items: center;
+    min-height: 580px;
+}
+.buttonAddItem{
+    position: static;
+    width: 292px;
+    height: 50px;
+    left: calc(50% - 292px/2);
+    /*top: 1252px;*/
+
+    /* Secondary/ Blue */
+
+    background: #F0F4FB;
+    border-radius: 51px;
+
+    /* Inside auto layout */
+    cursor: pointer ;
+    flex: none;
+    order: 4;
+    flex-grow: 0;
+    margin: 30px 0px;
 }
 
 
